         and LIBSPECTRUM_ID_CARTRIDGE_IF2.
20040601 szx.c: save/restore state of ZXCF upload jumper.
20040602 accessor.pl,internals.h,sna.c,snap_accessors.txt,snapshot.c,
	 szx.c,z80.c: save/restore ZXATASP state in .szx snaps.
20040603 Makefile.am,myglib/{.cvsignore,Makefile.am}: build the glib
	 replacement as PIC.
20040611 szx.c: skip those chunks we don't support.
20040611 szx.c: small changes to the ZXAT and ZXCF chunks to make them
	 more consistent with how the rest of the .szx format does things.
20040612 acconfig.h,configure.in: remove use of acconfig.h
20040612 szx.c: remove duplicated literal constants from the code.
20040620 README,autogen.sh: add script to do the autotools invocation.
20040620 hacking/cvs-tags: remove (use doc/cvs-tags instead).
20040621 z80.c: remove literal machine constants.
20040621 z80.c: allow the extensions to the .z80 machine type be valid
	 for both v2 and v3 files.
20040626 libspectrum.h.in: put libspectrum_tape_block_description in the
	 correct place.
20040626 Makefile.am: bump soname.
20040626 AUTHORS,README,TODO,doc/{libspectrum.3,libspectrum.txt}: doc
	 updates in preparation for a 0.2.2 release.
20040703 libspectrum.h.in,rzx.c,doc/libspectrum.txt: add ability to
	 select the format of the embedded snap in .rzx files.
20040706 acinclude.m4: distribute the Glib 1.2 and Glib 2.x autoconf
	 macros.
20040707 autogen.sh: add --copy to automake invocation.
20040709 configure.in: bump version number to 0.2.2pre1.
20040709 TAG: libspectrum_0_2_2pre1
20040715 README,doc/libspectrum.3: doc updates for 0.2.2.
20040715 z80.c: fix possible segfault if a snap had a page 19 (Stuart).
20040715 szx.c: bump .szx minor version number to 1.3.
20040716 configure.in: bump version number to 0.2.2.
20040718 autogen.sh: add libtoolize.
20040721 accessor.pl,snap_accessors.txt,z80.c: Add issue 2 keyboard support.
20040722 szx.c: add issue 2 keyboard support.
20040722 snapshot.c: initialise issue 2 keyboard setting.