@@ -261,3 +261,6 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20040721 accessor.pl,snap_accessors.txt,z80.c: Add issue 2 keyboard support.
 20040722 szx.c: add issue 2 keyboard support.
 20040722 snapshot.c: initialise issue 2 keyboard setting.
+20040806 libspectrum.h.in,snapshot.c,szx.c,z80.c,doc/libspectrum.txt: Add new
+         LIBSPECTRUM_FLAG_SNAPSHOT_ALWAYS_COMPRESS flag for use with
+         libspectrum_snap_write
